Start laying out core pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,11 @@
 .bg-water {
   background-color: $water;
 }
+
+.content {
+  padding-top: 76px; // Start content below nav-bar
+}
+
+.text-red {
+  color: $red;
+}
