--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/contact">Contact</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/settings">Settings</a>
+      </li>
     </ul>
   </div>
 </nav>
