--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -10,9 +10,6 @@
   <div class="collapse navbar-collapse navbar-right" id="navbarSupportedContent">
     <ul class="navbar-nav navbar-right ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/">Home</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" routerLink="/sign-up">Sign Up</a>
       </li>
       <li class="nav-item">
@@ -23,6 +20,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/settings">Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/keynet">KeyNet</a>
       </li>
     </ul>
   </div>
