--- a/src/app/components/keynet/keynet.component.html
+++ b/src/app/components/keynet/keynet.component.html
@@ -1,132 +1,170 @@
-<table class="table table-responsive-sm mx-0">
-  <thead>
-    <tr>
-      <th scope="col" class="align-middle">Key</th>
-      <th scope="col" class="align-middle">Node</th>
-      <th scope="col" class="align-middle">Parameters</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td rowspan="3" class="align-middle text-center">
-        <img src="assets/key_icons/temp_raw.png" width="50" height="50" alt="" class="p-2" />
-        <p class="text-water m-0">Temperature </p>
-      </td>
-      <td class="align-middle">
-        <h2 class="fas fa-long-arrow-alt-right text-water"></h2>
-        <h2 class="fas fa-eye text-water px-3"></h2>
-        Monitor
-      </td>
-      <td class="align-middle">
-        Warn Below:<br>
-        Warn Above:<br>
-        Danger Below:<br>
-        Danger Above:<br>
-        Notify Danger: Enabled
-      </td>
-    </tr>
-    <tr>
-      <td class="align-middle">
-        <h2 class="fas fa-long-arrow-alt-right text-water"></h2>
-        <h2 class="fas fa-chart-line text-water px-3"></h2>
-        Logger
-      </td>
-      <td class="align-middle">
-        Logging Frequency:<br>
-        Logger Destination:
-      </td>
-    </tr>
-    <tr>
-      <td class="align-middle">
-        <h2 class="fas fa-long-arrow-alt-right text-water"></h2>
-        <h2 class="fas fa-cogs text-water px-3"></h2>
-        Trigger
-      </td>
-      <td class="align-middle">
-        Action:<br>
-        Condition:<br>
-        Target:
-        <div class="col text-center">
-          <img src="assets/key_icons/fan_raw.png" width="50" height="50" alt="" class="p-2" />
-          <p class="text-water m-0">Fans</p>
-        </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<hr>
-<div class="container my-4">
-  <div class="row justify-content-center text-center">
-    <div class="col-sm-6">
-      <select class="form-control" id="node-add-select">
-        <option>Monitor</option>
-        <option>Logger</option>
-        <option>Trigger</option>
-      </select>
-    </div>
-    <div class="col-sm-2">
-      <button type="button" class="btn btn-primary btn-block" name="button">Add</button>
+<section *ngIf="isInput" id="input-table">
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col" class="align-middle">Key</th>
+          <th scope="col" class="align-middle">Node</th>
+          <th scope="col" class="align-middle">Parameters</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="3" class="align-middle text-center">
+            <div class="rounded interface-key p-3">
+              <a routerLink="/">
+                <img src="assets/key_icons/temp_raw.png" width="50" height="50" alt="" class="p-2" />
+                <p class="text-water m-0">Amb.Temp</p>
+              </a>
+            </div>
+          </td>
+          <td class="align-middle text-center">
+            <h2 class="fas fa-long-arrow-alt-right text-water"></h2>
+            <h2 class="fas fa-eye text-water px-3"></h2>
+            Monitor
+          </td>
+          <td class="align-middle">
+            Warn Below: 10&deg;<br>
+            Warn Above: 35&deg;<br>
+            Danger Below: 5&deg;<br>
+            Danger Above: 45&deg;<br>
+            Notify Danger: Enabled
+          </td>
+          <td class="align-middle">
+            <button class="btn btn-outline-secondary">
+              <i class="fas fa-backspace p-0"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td class="align-middle text-center">
+            <h2 class="fas fa-long-arrow-alt-right text-water"></h2>
+            <h2 class="fas fa-chart-line text-water px-3"></h2>
+            Logger
+          </td>
+          <td class="align-middle">
+            Logging Frequency: 1/hr<br>
+            Logger Destination: /home/seedlink/logs/temperature.log
+          </td>
+          <td class="align-middle">
+            <button class="btn btn-outline-secondary">
+              <i class="fas fa-backspace p-0"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td class="align-middle text-center">
+            <h2 class="fas fa-long-arrow-alt-right text-water"></h2>
+            <h2 class="fas fa-cogs text-water px-3"></h2>
+            Trigger
+          </td>
+          <td class="align-middle">
+            Action: Enable<br>
+            Condition: < 5<br>
+            Target:
+            <div class="text-center rounded interface-key p-3">
+              <a routerLink="/">
+                <img src="assets/key_icons/fan_raw.png" width="50" height="50" alt="" class="p-2" />
+                <p class="text-water m-0">Fans</p>
+              </a>
+            </div>
+          </td>
+          <td class="align-middle">
+            <button class="btn btn-outline-secondary">
+              <i class="fas fa-backspace p-0"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <hr>
+  <div class="container my-4">
+    <div class="row justify-content-center text-center">
+      <div class="col-sm-6">
+        <select class="form-control my-2" id="node-add-select">
+          <option>Monitor</option>
+          <option>Logger</option>
+          <option>Trigger</option>
+        </select>
+      </div>
+      <div class="col-sm-2">
+        <button type="button" class="btn btn-primary btn-block my-2" name="button">Add</button>
+      </div>
     </div>
   </div>
-</div>
+</section>
 
-
-
-<br><br><br><br>
-
-
-<table class="table table-responsive-sm">
-  <thead>
-    <tr>
-      <th scope="col" class="align-middle">Key</th>
-      <th scope="col" class="align-middle">Node</th>
-      <th scope="col" class="align-middle">Parameters</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td rowspan="3" class="align-middle text-center">
-        <img src="assets/key_icons/pump_raw.png" width="50" height="50" alt="" class="p-2" />
-        <p class="text-water m-0">Feed Pump</p>
-      </td>
-      <td class="align-middle">
-        <h2 class="fas fa-long-arrow-alt-left text-water"></h2>
-        <h2 class="fas fa-stopwatch text-water px-3"></h2>
-        Timed Event
-      </td>
-      <td class="align-middle">
-        <a>Schedule</a>
-      </td>
-    </tr>
-    <tr>
-      <td class="align-middle">
-        <h2 class="fas fa-long-arrow-alt-left text-water"></h2>
-        <h2 class="fas fa-cogs text-water px-3"></h2>
-        Trigger
-      </td>
-      <td class="align-middle">
-        Action:<br>
-        Condition:<br>
-        Source:
-        <div class="col text-center">
-          <img src="assets/key_icons/soil_raw.png" width="50" height="50" alt="" class="p-2" />
-          <p class="text-water m-0">Soil</p>
-        </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<hr>
-<div class="container my-4">
-  <div class="row justify-content-center text-center">
-    <div class="col-sm-6">
-      <select class="form-control" id="node-add-select">
-        <option>Timer</option>
-        <option>Trigger</option>
-      </select>
-    </div>
-    <div class="col-sm-2">
-      <button type="button" class="btn btn-primary btn-block" name="button">Add</button>
+<section *ngIf="!isInput" id="output-table">
+  <table class="table table-responsive-sm">
+    <thead>
+      <tr>
+        <th scope="col" class="align-middle">Key</th>
+        <th scope="col" class="align-middle">Node</th>
+        <th scope="col" class="align-middle">Parameters</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td rowspan="3" class="align-middle text-center">
+          <div class="rounded interface-key p-3">
+            <a routerLink="/">
+              <img src="assets/key_icons/pump_raw.png" width="50" height="50" alt="" class="p-2" />
+              <p class="text-water m-0">Feed Pump</p>
+            </a>
+          </div>
+        </td>
+        <td class="align-middle">
+          <h2 class="fas fa-long-arrow-alt-left text-water"></h2>
+          <h2 class="fas fa-stopwatch text-water px-3"></h2>
+          Timed Event
+        </td>
+        <td class="align-middle">
+          <a>Schedule</a>
+        </td>
+        <td class="align-middle">
+          <button class="btn btn-outline-secondary">
+            <i class="fas fa-backspace p-0"></i>
+          </button>
+        </td>
+      </tr>
+      <tr>
+        <td class="align-middle">
+          <h2 class="fas fa-long-arrow-alt-left text-water"></h2>
+          <h2 class="fas fa-cogs text-water px-3"></h2>
+          Trigger
+        </td>
+        <td class="align-middle">
+          Action:<br>
+          Condition:<br>
+          Source:
+          <div class="text-center rounded interface-key p-3">
+            <a routerLink="/">
+              <img src="assets/key_icons/soil_raw.png" width="50" height="50" alt="" class="p-2" />
+              <p class="text-water m-0">Soil</p>
+            </a>
+          </div>
+        </td>
+        <td class="align-middle">
+          <button class="btn btn-outline-secondary">
+            <i class="fas fa-backspace p-0"></i>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <div class="container my-4">
+    <div class="row justify-content-center text-center">
+      <div class="col-sm-6">
+        <select class="form-control my-2" id="node-add-select">
+          <option>Timer</option>
+          <option>Trigger</option>
+        </select>
+      </div>
+      <div class="col-sm-2">
+        <button type="button" class="btn btn-primary btn-block my-2" name="button">Add</button>
+      </div>
     </div>
   </div>
-</div>
+</section>
