--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,8 +9,17 @@
 
   <div class="collapse navbar-collapse navbar-right" id="navbarSupportedContent">
     <ul class="navbar-nav navbar-right ml-auto">
-      <li class="nav-item">
+      <li *ngIf="!signedIn" class="nav-item">
         <a class="nav-link" routerLink="/sign-up">Sign Up</a>
+      </li>
+      <li *ngIf="!signedIn" class="nav-item">
+        <a class="nav-link" routerLink="/sign-in">Sign In</a>
+      </li>
+      <li *ngIf="signedIn" class="nav-item">
+        <a class="nav-link" routerLink="/settings">Settings</a>
+      </li>
+      <li *ngIf="signedIn" class="nav-item">
+        <a class="nav-link" routerLink="/keynet">KeyNet</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about">About</a>
@@ -18,11 +27,8 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/contact">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/settings">Settings</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/keynet">KeyNet</a>
+      <li *ngIf="signedIn" class="nav-item">
+        <a class="nav-link logout-link" (click)="_authService.logout()">Logout</a>
       </li>
     </ul>
   </div>
