--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="form-check ml-2">
         <input type="checkbox" class="form-check-input" id="agree" required [(ngModel)]="agree" name="agree">
-        <label class="form-check-label" for="agree">I agree to the terms of service</label>
+        <label class="form-check-label text-muted" for="agree">I agree to the terms of service</label>
       </div>
       <hr class="bg-primary my-5">
       <div class="form-group p-2">
